{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 48,
  "lineage": "81ca0e08-6255-409f-8f10-411a06885322",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0277731d022f3cbe8",
            "arn": "arn:aws:ec2:ap-south-1:767397798657:elastic-ip/eipalloc-0277731d022f3cbe8",
            "domain": "vpc",
            "id": "eipalloc-0277731d022f3cbe8",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-13-202-14-125.ap-south-1.compute.amazonaws.com",
            "public_ip": "13.202.14.125",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397798657:internet-gateway/igw-09f0cd79516384947",
            "id": "igw-09f0cd79516384947",
            "owner_id": "767397798657",
            "tags": {
              "Name": "infra-gw",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "infra-gw",
              "terraform": "true"
            },
            "vpc_id": "vpc-063f189b2e530de65"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0277731d022f3cbe8",
            "association_id": "eipassoc-031cf17a81efa7a60",
            "connectivity_type": "public",
            "id": "nat-0d26c352dcc26aea2",
            "network_interface_id": "eni-0f9c328fe8904519e",
            "private_ip": "10.0.1.217",
            "public_ip": "13.202.14.125",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05886fd1b86775202"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07516c556cdd283521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d26c352dcc26aea2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07516c556cdd28352",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.db_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-002687003f80d217d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d26c352dcc26aea2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-002687003f80d217d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.gw",
            "aws_route_table.private_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "db_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397798657:route-table/rtb-07516c556cdd28352",
            "id": "rtb-07516c556cdd28352",
            "owner_id": "767397798657",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra-db-rt",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "infra-db-rt",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-063f189b2e530de65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397798657:route-table/rtb-002687003f80d217d",
            "id": "rtb-002687003f80d217d",
            "owner_id": "767397798657",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "infra-private-rt",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "infra-private-rt",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-063f189b2e530de65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397798657:route-table/rtb-05aad58d8115d615a",
            "id": "rtb-05aad58d8115d615a",
            "owner_id": "767397798657",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f0cd79516384947",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "infra-public-rt",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "infra-public-rt",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-063f189b2e530de65"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e48b4514322dc2ce",
            "route_table_id": "rtb-07516c556cdd28352",
            "subnet_id": "subnet-01e1e9232430c9713"
          },
          "dependencies": [
            "aws_route_table.db_rt",
            "aws_subnet.db_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dea311c8b0c12c80",
            "route_table_id": "rtb-002687003f80d217d",
            "subnet_id": "subnet-0839f8674dafa36f0"
          },
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02eca6b5e972b2c6d",
            "route_table_id": "rtb-05aad58d8115d615a",
            "subnet_id": "subnet-05886fd1b86775202"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397798657:subnet/subnet-01e1e9232430c9713",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01e1e9232430c9713",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397798657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-db-subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "infra-db-subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-063f189b2e530de65"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397798657:subnet/subnet-0839f8674dafa36f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0839f8674dafa36f0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397798657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-private-subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "infra-private-subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-063f189b2e530de65"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397798657:subnet/subnet-05886fd1b86775202",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05886fd1b86775202",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "767397798657",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "infra-public-subnet",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "infra-public-subnet",
              "terraform": "true"
            },
            "vpc_id": "vpc-063f189b2e530de65"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:767397798657:vpc/vpc-063f189b2e530de65",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02149bd09625a6c77",
            "default_route_table_id": "rtb-07fc8e278f8bec09c",
            "default_security_group_id": "sg-05c9538ebab40ab86",
            "dhcp_options_id": "dopt-035b607811cc5734a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-063f189b2e530de65",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07fc8e278f8bec09c",
            "owner_id": "767397798657",
            "tags": {
              "Name": "infra-vpc",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "infra-vpc",
              "terraform": "true"
            }
          }
        }
      ]
    }
  ]
}